apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      name: jellyfin
      namespace: jellyfin
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: app
                  operator: In
                  values:
                    - compute
      containers:
      - name: jellyfin
        livenessProbe:
          tcpSocket:
            port: http-web-svc
          initialDelaySeconds: 120
        image: docker.io/linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
          name: http-web-svc
          protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            drop:
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
        volumeMounts:
        - name: media
          mountPath: /media
        - name: conf
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: dev-dri
          mountPath: /dev/dri/renderD128
        resources:
          requests:
            memory: "10G"
            cpu: "600m"
          limits:
            memory: "10G"
            cpu: "600m"
      enableServiceLinks: false
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: conf
        persistentVolumeClaim:
          claimName: jellyfin-conf-pvc
      - name: dev-dri
        hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
      - name: card1
        hostPath:
          path: /dev/dri/card1
          type: CharDevice
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
