apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
  annotations:
    kubernetes.io/ingress.class: "system-cluster-critical"
    svccontroller.k3s.cattle.io/lbpool: pool1
spec:
  ports:
    - name: http-web
      port: 8096
      targetPort: http-web-svc
      protocol: TCP
  selector:
    app: jellyfin
  type: LoadBalancer
